--- a/public/src/scss/views/_movies.scss
+++ b/public/src/scss/views/_movies.scss
@@ -1,11 +1,28 @@
 .view-movies {
     .movies-list {
-        padding: 0 20px 20px;
+        padding: 0 0 20px;
 
-        @include media(web) {
+        @include media(smartphone-big) {
+            padding: 0 10px 20px;
+
             .list-item {
                 box-sizing: border-box;
                 float: left;
+                width: 50%;
+                padding: 0 10px 20px;
+            }
+        }
+
+        @include media(tablet) {
+            .list-item {
+                width: (100%/3);
+            }
+        }
+
+        @include media(web) {
+            padding: 0 20px 20px;
+
+            .list-item {
                 width: 25%;
                 padding: 0 20px 40px;
             }
@@ -15,39 +32,43 @@
     .list-item-movie {
         @extend %clearfix;
         background: $grayMedium;
-        height: 45px;
+        max-height: 45px;
         overflow: hidden;
         padding: 0 15px;
         position: relative;
-
-        @include media(web) {
-            height: auto;
-            padding: 0;
-        }
+        transition: max-height $transition;
 
         &.active {
-            height: auto;
+            max-height: 480px;
+        }
+
+        @include media(smartphone-big) {
+            max-height: none;
         }
 
         .title {
+            box-sizing: border-box;
             display: block;
             font-size: 20px;
-            line-height: 45px;
+            line-height: 25px;
             height: 45px;
             overflow: hidden;
             white-space: nowrap;
+            padding-top: 10px;
+            padding-bottom: 10px;
             padding-right: 65px;
             text-overflow: ellipsis;
 
-            @include media(web) {
+            @include media(smartphone-big) {
                 display: none;
+                padding-right: 0;
             }
         }
 
         .details .title {
             display: none;
 
-            @include media(web) {
+            @include media(smartphone-big) {
                 display: block;
             }
         }
@@ -73,7 +94,13 @@
         }
 
         .duration {
-            float: right;
+            float: left;
+            margin-left: 10px;
+
+            @include media(smartphone-big) {
+                float: right;
+                margin-left: 0;
+            }
         }
 
         .description {
@@ -89,19 +116,30 @@
             line-height: 1.3;
             padding-left: 15px;
             width: 60%;
+
+            @include media(smartphone-big) {
+                width: 100%;
+            }
         }
 
         .image {
             float: left;
             width: 40%;
-            position: relative;
             margin-bottom: 15px;
+
+            @include media(smartphone-big) {
+                float: none;
+                width: 100%;
+                margin-bottom: 0;
+                position: relative;
+            }
 
             .wrapper {
                 display: block;
                 padding-bottom: 140%;
                 overflow: hidden;
                 width: 100%;
+                position: relative;
             }
 
             img {
@@ -115,9 +153,28 @@
 
         .item-action {
             box-sizing: border-box;
-            float: right;
-            padding: 0 0 15px 15px;
-            width: 60%;
+            padding: 5px 0 0;
+
+            @include media(smartphone-big) {
+                position: absolute;
+                left: 50%;
+                right: auto;
+                top: 130px;
+                height: 70px;
+                width: 170px;
+                margin-left: -85px;
+                margin-top: -35px;
+                padding: 0;
+                opacity: 0;
+                transition: opacity $transition;
+
+                .button {
+                    line-height: 70px;
+                    height: 70px;
+                    padding-top: 0;
+                    padding-bottom: 0;
+                }
+            }
 
             .icon {
                 display: inline-block !important;
@@ -136,6 +193,23 @@
             padding: 5px;
             box-sizing: border-box;
 
+            @include media(smartphone-big) {
+                background: rgba($grayMedium, 0.9);
+                border-radius: 5px;
+                left: 50%;
+                right: auto;
+                top: 130px;
+                height: 70px;
+                line-height: 55px;
+                padding-bottom: 10px;
+                width: 170px;
+                margin-left: -85px;
+                margin-top: -35px;
+                overflow: hidden;
+                text-align: center;
+                transition: opacity $transition;
+            }
+
             .icon {
                 display: inline-block !important;
                 margin-right: 3px;
@@ -150,6 +224,10 @@
                 overflow: hidden;
                 text-overflow: ellipsis;
                 width: 100%;
+
+                @include media(smartphone-big) {
+                    font-size: 14px;
+                }
             }
         }
 
@@ -158,6 +236,13 @@
             height: 8px;
             margin-top: 5px;
             position: relative;
+
+            @include media(smartphone-big) {
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                right: 0;
+            }
 
             .back {
                 background: $text;
@@ -181,10 +266,14 @@
 
             .item-status .icon {
                 @include sprite($play-circle);
+
+                @include media(smartphone-big) {
+                    @include sprite($play-circle-big);
+                }
             }
 
-            .item-action {
-                display: none;
+            .item-action .icon {
+                @include sprite($pause-circle-big);
             }
         }
 
@@ -193,8 +282,16 @@
                 display: block;
             }
 
+            .item-status-progress .front {
+                background: $grayLight;
+            }
+
             .item-status .icon {
                 @include sprite($pause-circle);
+
+                @include media(smartphone-big) {
+                    @include sprite($pause-circle-big);
+                }
             }
 
             .item-action .icon {
@@ -209,6 +306,10 @@
 
             .item-status .icon {
                 @include sprite($download);
+
+                @include media(smartphone-big) {
+                    @include sprite($download-big);
+                }
             }
 
             .item-action .icon {
@@ -223,10 +324,70 @@
 
             .item-status .icon {
                 @include sprite($pause-circle);
+
+                @include media(smartphone-big) {
+                    @include sprite($pause-circle-big);
+                }
+            }
+
+            .item-status-progress .front {
+                background: $grayLight;
             }
 
             .item-action .icon {
                 @include sprite($download-big);
+            }
+        }
+
+        &.active,
+        .no-touch &:hover {
+            .title {
+                height: auto;
+                white-space: normal;
+            }
+        }
+
+        @include media(smartphone-big) {
+            padding: 0;
+            transition: box-shadow $transition, padding $transition, margin $transition;
+
+            .details {
+                padding: 0 15px;
+                max-height: 45px;
+                transition: padding $transition, max-height $transition;
+            }
+
+            .description {
+                margin: 0 -15px;
+                opacity: 0;
+                transition: margin $transition, opacity $transition 0.10s;
+            }
+
+            &.active,
+            .no-touch &:hover {
+                padding: 15px;
+                margin: -15px;
+                max-height: none;
+                box-shadow: rgba(0, 0, 0, 0.75) 1px 1px 5px 0;
+                z-index: 3;
+
+                .details {
+                    padding: 0;
+                    max-height: 400px;
+                }
+
+                .description {
+                    margin: 0;
+                    opacity: 1;
+                }
+
+                .item-action {
+                    opacity: 1;
+                }
+
+                .item-status {
+                    opacity: 0;
+                }
             }
         }
     }
