--- a/public/src/js/templates/layout/header.html
+++ b/public/src/js/templates/layout/header.html
@@ -1,7 +1,7 @@
 <header class="view-header page-wrapper">
-    <a class="header-item active" href="#!/movies">Filmy</a>
-    <a class="header-item" href="#!/series">Seriale</a>
-    <a class="header-item" href="#!/music">Muzyka</a>
-    <a class="header-item" href="#!/photos">Zdjęcia</a>
-    <a class="header-item settings" href="#!/settings"><i class="icon icon-settings"></i></a>
+    <a class="header-item" href="#!/movies" data-route="movies">Filmy</a>
+    <a class="header-item" href="#!/series" data-route="series">Seriale</a>
+    <a class="header-item" href="#!/music" data-route="music">Muzyka</a>
+    <a class="header-item" href="#!/photos" data-route="photos">Zdjęcia</a>
+    <a class="header-item settings" href="#!/settings" data-route="settings"><i class="icon icon-settings"></i></a>
 </header>
