--- a/public/src/js/templates/movies.html
+++ b/public/src/js/templates/movies.html
@@ -4,7 +4,7 @@
     <ul class="items-list movies-list page-wrapper">
         <% movies.each(function(movie){ %>
         <li class="list-item">
-            <div class="list-item-movie<%= movie.get('status') ? ' is-' + movie.get('status') : '' %>">
+            <div class="list-item-movie<%= movie.get('status') ? ' is-' + movie.get('status') : '' %><%= movie.get('is-watched') ? ' watched' : '' %>">
                 <span class="title"><%= movie.get('title') %></span>
 
                 <div class="image">
