feat(movies): render search view

--- a/public/src/js/templates/movies.html
+++ b/public/src/js/templates/movies.html
@@ -1,5 +1,5 @@
 <section class="view-movies">
-    <section class="view-search-container"></section>
+    <section class="view-search-container page-wrapper"></section>
 
     <ul class="items-list movies-list page-wrapper">
         <% movies.each(function(movie){ %>
