feat(series): style series view

--- a/public/src/scss/_base.scss
+++ b/public/src/scss/_base.scss
@@ -46,7 +46,7 @@ a {
         vertical-align: middle;
     }
 
-    .no-touch &:hover {
+    .no-touchevents &:hover {
         background: $accent;
     }
 }
