--- a/public/src/scss/layout/_header.scss
+++ b/public/src/scss/layout/_header.scss
@@ -59,7 +59,7 @@
             bottom: 0;
         }
 
-        .no-touch &:hover {
+        .no-touchevents &:hover {
             color: $accent;
 
             &.active {
