--- a/public/src/scss/main.scss
+++ b/public/src/scss/main.scss
@@ -6,6 +6,7 @@
 @import 'variables';
 @import 'mixins';
 @import 'placeholders';
+@import 'animations';
 @import 'base';
 
 @import 'layout/header';
