--- a/public/src/scss/_placeholders.scss
+++ b/public/src/scss/_placeholders.scss
@@ -5,3 +5,33 @@
         clear: both;
     }
 }
+
+
+%button {
+    background: $grayMedium;
+    border-radius: 5px;
+    color: #fff;
+    display: inline-block;
+    height: 40px;
+    font-size: 16px;
+    line-height: 40px;
+    padding: 0 10px;
+    text-transform: lowercase;
+    transition: background $transition;
+
+    .no-touchevents &:hover {
+        background: none;
+    }
+
+    i {
+        display: inline-block;
+        margin-right: 5px;
+        vertical-align: middle;
+    }
+
+    span {
+        display: inline-block;
+        line-height: 20px;
+        vertical-align: middle;
+    }
+}
