--- a/public/src/scss/views/_music.scss
+++ b/public/src/scss/views/_music.scss
@@ -1,45 +1,4 @@
-.view-music {
-    padding: 0 10px;
-
-    header {
-        @extend %clearfix;
-        padding: 5px 5px 10px;
-
-        h2 {
-            display: inline-block;
-            font-size: 24px;
-            line-height: 40px;
-            text-transform: uppercase;
-        }
-    }
-
-    h3 {
-        font-size: 20px;
-        margin: 5px 5px 10px;
-    }
-
-    .browse {
-        @extend %button;
-        float: right;
-
-        @include media(tablet) {
-            margin-left: 10px;
-        }
-
-        @include media(tablet-big) {
-            float: none;
-        }
-
-        @include media(web) {
-            margin-left: 20px;
-        }
-    }
-
-    .your-radios,
-    .your-playlists {
-        margin-bottom: 10px;
-    }
-
+.items-list {
     .list-item-radio,
     .list-item-playlist {
         background: $grayMedium;
@@ -204,6 +163,49 @@
                 display: none;
             }
         }
+    }
+}
+
+.view-music {
+    padding: 0 10px;
+
+    header {
+        @extend %clearfix;
+        padding: 5px 5px 10px;
+
+        h2 {
+            display: inline-block;
+            font-size: 24px;
+            line-height: 40px;
+            text-transform: uppercase;
+        }
+    }
+
+    h3 {
+        font-size: 20px;
+        margin: 5px 5px 10px;
+    }
+
+    .browse {
+        @extend %button;
+        float: right;
+
+        @include media(tablet) {
+            margin-left: 10px;
+        }
+
+        @include media(tablet-big) {
+            float: none;
+        }
+
+        @include media(web) {
+            margin-left: 20px;
+        }
+    }
+
+    .your-radios,
+    .your-playlists {
+        margin-bottom: 10px;
     }
 
     .your-tracks {
@@ -488,3 +490,122 @@
         }
     }
 }
+
+.view-music-radio {
+    @extend %clearfix;
+
+    h2 {
+        font-size: 20px;
+        text-transform: uppercase;
+        padding: 10px 15px 5px;
+
+        @include media(smartphone-big) {
+            padding-left: 30px;
+        }
+
+        @include media(tablet-big) {
+            padding-bottom: 10px;
+        }
+
+        @include media(web) {
+            padding-left: 42px;
+            font-size: 24px;
+        }
+    }
+
+    .radio-genres,
+    .radio-countries {
+        @include media(tablet-big) {
+            float: left;
+            width: 50%;
+        }
+    }
+
+    .radio-countries .items-list {
+        @include media(tablet-big) {
+            box-sizing: border-box;
+            border-left: 1px solid $grayMedium;
+        }
+    }
+
+    .radio-countries-list,
+    .radio-genres-list {
+        @extend %clearfix;
+        padding: 10px 5px 10px 15px;
+        display: block;
+        line-height: 20px;
+
+        @include media(smartphone-big) {
+            padding-left: 25px;
+        }
+
+        @include media(web) {
+            padding-left: 37px;
+        }
+
+        .list-item {
+            box-sizing: border-box;
+
+            @include media(smartphone-big) {
+                width: 50%;
+                float: left;
+            }
+
+            @include media(tablet) {
+                width: (100%/3);
+            }
+
+            @include media(tablet-big) {
+                width: 50%;
+            }
+
+            @include media(web) {
+                width: (100%/3);
+            }
+
+            @include media(web-big) {
+                width: 50%;
+            }
+        }
+
+        a {
+            color: #fff;
+            display: inline-block;
+
+            padding: 5px;
+
+            .no-touchevents &:hover {
+                color: $accent;
+            }
+        }
+    }
+
+    .radios-list {
+        padding: 10px;
+        @extend %clearfix;
+
+        @include media(smartphone-big) {
+            padding: 10px 10px;
+        }
+
+        @include media(web) {
+            padding: 10px 42px;
+        }
+    }
+
+    .list-item-radio {
+        @include media(smartphone-big) {
+            box-sizing: border-box;
+            float: left;
+            width: 48%;
+            margin-right: 2%;
+        }
+
+        @include media(tablet) {
+            margin-right: 1%;
+            width: (100%/3) - 1%;
+        }
+    }
+}
+
+
