--- a/public/src/js/templates/music/lists/playlists.html
+++ b/public/src/js/templates/music/lists/playlists.html
@@ -1,5 +1,2 @@
-<div class="items-list playlists-list">
-    <% playlists.each(function(playlist){ %>
-        <%= _.template(itemTemplate, {playlist: playlist}) %>
-    <% }) %>
-</div>
+<div class="items-list playlists-list"></div>
+<div class="loader"></div>
