--- a/public/src/js/templates/music/lists/tracks.html
+++ b/public/src/js/templates/music/lists/tracks.html
@@ -1,5 +1,2 @@
-<div class="items-list tracks-list">
-    <% tracks.each(function(track){ %>
-    <%= _.template(itemTemplate, {track: track}) %>
-    <% }) %>
-</div>
+<div class="items-list tracks-list"></div>
+<div class="loader"></div>
