--- a/public/src/js/templates/music/browse.html
+++ b/public/src/js/templates/music/browse.html
@@ -1,3 +1,9 @@
 <section class="view-music-browse">
     <section class="view-search-container page-wrapper"></section>
+
+    <h2 class="featured-playlists-message page-wrapper"></h2>
+    <div class="view-playlists"></div>
+
+    <h2 class="page-wrapper">Gatunki i nastroje</h2>
+    <div class="view-categories page-wrapper"></div>
 </section>
