feat(music): spotify artist page

--- a/public/src/js/templates/music/browse.html
+++ b/public/src/js/templates/music/browse.html
@@ -7,3 +7,4 @@
     <h2 class="page-wrapper">Gatunki i nastroje</h2>
     <div class="view-categories page-wrapper"></div>
 </section>
+<a href="#!/music/browse/artist/1Ffb6ejR6Fe5IamqA5oRUF">Artysta</a>
