--- a/public/src/scss/views/_music.scss
+++ b/public/src/scss/views/_music.scss
@@ -242,6 +242,150 @@
     -webkit-overflow-scrolling: touch;
 }
 
+.list-item-track {
+    @extend %clearfix;
+    color: #fff;
+    cursor: pointer;
+    display: block;
+    padding: 5px 10px;
+    position: relative;
+    transition: background $transition;
+
+    .no-touchevents &:hover {
+        background: $grayMedium;
+    }
+
+    .artists {
+        color: $grayLight;
+        font-size: 14px;
+        line-height: 18px;
+        padding-top: 5px;
+
+        a {
+            color: $grayLight;
+            font-size: 14px;
+
+            .no-touchevents &:hover {
+                color: lighten($grayLight, 20%);
+            }
+        }
+    }
+
+    .details {
+        @extend %clearfix;
+        display: block;
+
+        .name {
+            box-sizing: border-box;
+            padding: 10px 5px 5px 0;
+            float: left;
+            line-height: 20px;
+            width: 80%;
+
+            .icon {
+                display: inline-block;
+                margin-bottom: -2px;
+                transition: width $transition, margin $transition;
+                width: 0;
+            }
+        }
+
+        .duration {
+            box-sizing: border-box;
+            color: $grayLight;
+            font-size: 14px;
+            float: right;
+            width: 20%;
+            text-align: right;
+            padding: 10px 0 5px 5px;
+        }
+    }
+
+    .no-touchevents &:hover .details .name .icon,
+    .touchevents & .details .name .icon {
+        margin-right: 5px;
+        width: sprite-width($play-circle);
+    }
+
+    .item-action {
+        position: absolute;
+        width: 60px;
+        top: 0;
+        text-align: center;
+        bottom: 0;
+        right: 0;
+
+        &:before {
+            content: '';
+            display: inline-block;
+            height: 100%;
+            vertical-align: middle;
+        }
+
+        i {
+            display: inline-block;
+            vertical-align: middle;
+            @include sprite-height($star-full);
+            @include sprite-width($star-full);
+        }
+
+        .no-touchevents & {
+            &:hover i {
+                animation: grow 0.3s 1 linear;
+            }
+
+            &.star {
+                i {
+                    @include sprite-position($star-empty);
+                }
+
+                &:hover i {
+                    @include sprite-position($star-full);
+                }
+            }
+
+            &.unstar {
+                i {
+                    @include sprite-position($star-full);
+                }
+
+                &:hover i {
+                    @include sprite-position($star-empty);
+                }
+            }
+        }
+
+        .touchevents &.star i {
+            @include sprite-position($star-full);
+        }
+        .touchevents &.unstar i {
+            @include sprite-position($star-empty);
+        }
+    }
+
+    .no-touchevents & {
+        .item-action {
+            opacity: 0;
+            transition: opacity $transition;
+        }
+
+        .duration {
+            transition: opacity $transition;
+        }
+
+        &:hover {
+            .item-action {
+                opacity: 1;
+                z-index: 2;
+            }
+
+            .duration {
+                opacity: 0;
+            }
+        }
+    }
+}
+
 .view-music {
     padding: 0 10px;
 
@@ -290,171 +434,6 @@
         h3 {
             margin-left: 15px;
             margin-right: 15px;
-        }
-    }
-
-    .list-item-track {
-        @extend %clearfix;
-        color: #fff;
-        cursor: pointer;
-        display: block;
-        padding: 5px 10px;
-        position: relative;
-        transition: background $transition;
-
-        .no-touchevents &:hover {
-            background: $grayMedium;
-        }
-
-        .artists {
-            color: $grayLight;
-            font-size: 14px;
-            line-height: 18px;
-            padding-top: 5px;
-
-            a {
-                color: $grayLight;
-                font-size: 14px;
-
-                .no-touchevents &:hover {
-                    color: lighten($grayLight, 20%);
-                }
-            }
-        }
-
-        .details {
-            @extend %clearfix;
-            display: block;
-
-            .name {
-                box-sizing: border-box;
-                padding: 10px 5px 5px 0;
-                float: left;
-                line-height: 20px;
-                width: 80%;
-
-                .icon {
-                    display: inline-block;
-                    margin-bottom: -2px;
-                    transition: width $transition, margin $transition;
-                    width: 0;
-                }
-            }
-
-            .duration {
-                box-sizing: border-box;
-                color: $grayLight;
-                font-size: 14px;
-                float: right;
-                width: 20%;
-                text-align: right;
-                padding: 10px 0 5px 5px;
-            }
-        }
-
-        .touchevents {
-            .duration {
-                display: none;
-            }
-        }
-
-        .no-touchevents &:hover .details .name .icon,
-        .touchevents & .details .name .icon {
-            margin-right: 5px;
-            width: sprite-width($play-circle);
-        }
-
-        .item-action {
-            position: absolute;
-            width: 60px;
-            top: 0;
-            text-align: center;
-            bottom: 0;
-            right: 0;
-
-            &:before {
-                content: '';
-                display: inline-block;
-                height: 100%;
-                vertical-align: middle;
-            }
-
-            i {
-                display: inline-block;
-                vertical-align: middle;
-                @include sprite-height($star-full);
-                @include sprite-width($star-full);
-            }
-
-            .no-touchevents & {
-                &:hover i {
-                    animation: grow 0.3s 1 linear;
-                }
-
-                &.star {
-                    i {
-                        @include sprite-position($star-empty);
-                    }
-
-                    &:hover i {
-                        @include sprite-position($star-full);
-                    }
-                }
-
-                &.unstar {
-                    i {
-                        @include sprite-position($star-full);
-                    }
-
-                    &:hover i {
-                        @include sprite-position($star-empty);
-                    }
-                }
-            }
-
-            .touchevents &.star i {
-                @include sprite-position($star-full);
-            }
-            .touchevents &.unstar i {
-                @include sprite-position($star-empty);
-            }
-        }
-
-        .no-touchevents & {
-            .item-action {
-                opacity: 0;
-                transition: opacity $transition;
-            }
-
-            .duration {
-                transition: opacity $transition;
-            }
-
-            &:hover {
-                .item-action {
-                    opacity: 1;
-                    z-index: 2;
-                }
-
-                .duration {
-                    opacity: 0;
-                }
-            }
-        }
-
-        .touchevents & {
-            .details {
-                padding-right: 50px;
-
-                .name {
-                    float: none;
-                    width: auto;
-                }
-
-                .duration {
-                    display: none;
-                }
-            }
         }
     }
 
@@ -778,6 +757,223 @@
 
         @include media(web) {
             padding: 0 35px;
+        }
+    }
+}
+
+.view-music-browse-artist {
+    .view-artist {
+        box-sizing: border-box;
+        min-height: 120px;
+        padding: 10px 10px 10px 120px;
+        overflow: hidden;
+        position: relative;
+        display: block;
+        transform: translate3d(0,0,0);
+
+        @include media(smartphone-big) {
+            padding: 20px 30px 20px 140px;
+        }
+
+        @include media(tablet-big) {
+            padding: 30px 40px 30px 170px;
+            min-height: 140px;
+        }
+
+        .cover {
+            background-position: center;
+            background-size: cover;
+            background-repeat: no-repeat;
+            filter: blur(10px) brightness(0.6);
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+        }
+
+        .image,
+        .details {
+            position: relative;
+        }
+
+        &:before {
+            content: '';
+            display: inline-block;
+            vertical-align: bottom;
+            height: 100%;
+        }
+
+        .details {
+            display: block;
+            vertical-align: bottom;
+            text-shadow: 1px 1px 1px rgba(#000, 0.2);
+        }
+
+        .image {
+            width: 100px;
+            height: 100px;
+            border-radius: 100px;
+            box-shadow: 1px 1px 1px 0 rgba(#000, 0.2);
+            position: absolute;
+            left: 10px;
+            top: 50%;
+            margin-top: -50px;
+
+            @include media(smartphone-big) {
+                left: 20px;
+            }
+
+            @include media(tablet-big) {
+                width: 120px;
+                height: 120px;
+                left: 30px;
+                margin-top: -60px;
+            }
+        }
+
+        .label {
+            text-transform: uppercase;
+            margin-bottom: 2px;
+            font-size: 12px;
+            color: darken(#fff, 15%);
+
+            @include media(smartphone-big) {
+                font-size: 14px;
+            }
+        }
+
+        .followers {
+            float: right;
+            font-size: 14px;
+            text-align: right;
+
+            @include media(smartphone-big) {
+                font-size: 18px;
+            }
+
+            .label {
+                display: block;
+            }
+        }
+
+        .name {
+            font-size: 20px;
+            margin-bottom: 10px;
+
+            @include media(smartphone-big) {
+                font-size: 24px;
+            }
+        }
+    }
+
+    h2 {
+        font-size: 20px;
+        text-transform: uppercase;
+        padding: 15px 15px 5px;
+
+        @include media(tablet-big) {
+            font-size: 24px;
+            padding: 15px 15px 15px 20px;
+        }
+    }
+
+    .view-tracks {
+        .list-item-track {
+            @include media(tablet-big) {
+                padding: 0 20px;
+            }
+
+            .artists {
+                display: none;
+            }
+
+            .details {
+                .name {
+                    padding-top: 5px;
+                }
+            }
+        }
+    }
+
+    .popular-tracks {
+        text-align: center;
+
+        @include media(tablet-big) {
+            width: 50%;
+            float: left;
+        }
+
+        .view-tracks,
+        h2 {
+            text-align: left;
+        }
+
+        .button .active {
+            display: none;
+        }
+
+        .button.active {
+            .inactive {
+                display: none;
+            }
+            .active {
+                display: inline;
+            }
+        }
+    }
+
+    .artist-albums {
+        clear: both;
+        margin-top: 20px;
+
+        .view-album {
+            @include media(tablet-big) {
+                width: 50%;
+                display: inline-block;
+                box-sizing: border-box;
+                padding: 0 10px;
+                vertical-align: top;
+            }
+        }
+    }
+}
+
+.view-album {
+    .album-details {
+        @extend %clearfix;
+        padding: 10px;
+
+        .image {
+            width: 100px;
+            display: inline-block;
+            float: left;
+            margin-right: 10px;
+        }
+        .name {
+            font-size: 20px;
+            line-height: 24px;
+            margin-top: 20px;
+        }
+    }
+
+    @include media(tablet-big) {
+        .list-item-track {
+            .artists {
+                box-sizing: border-box;
+                width: 30%;
+                float: left;
+                padding: 10px 10px 10px 0;
+            }
+
+            .details {
+                width: 70%;
+                float: left;
+
+                .name {
+                    padding: 10px 5px 10px 0;
+                }
+            }
         }
     }
 }
