feat(music): album view

--- a/public/src/js/templates/music/album.html
+++ b/public/src/js/templates/music/album.html
@@ -1,5 +1,7 @@
-<div class="album-details">
-    <img class="image" src="<%= album.get('image') %>">
-    <p class="name"><%= album.get('name') %></p>
+<div class="view-album">
+    <div class="album-details">
+        <img class="image" src="<%= album.get('image') %>">
+        <p class="name"><%= album.get('name') %></p>
+    </div>
+    <div class="view-album-tracks"></div>
 </div>
-<div class="view-album-tracks"></div>
