refactor(player): use range input for progress scrubber

--- a/public/src/scss/layout/_player.scss
+++ b/public/src/scss/layout/_player.scss
@@ -17,66 +17,62 @@ body {
         bottom: 0;
     }
 
-    .player-scrubber-pane {
-        transition: background $transition;
-        position: absolute;
-        top: 0;
-        height: 2px;
-        left: 0;
-        right: 0;
-        background: $grayLight;
-        cursor: pointer;
+    .player-scrubber {
+        .player-scrubber-pane {
+            -webkit-appearance: none;
+            margin: 0;
+            height: 2px;
+            background: $grayLight;
+            width: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
 
-        &:before {
+            &:focus {
+                outline: none;
+            }
+
+            &::-webkit-slider-runnable-track,
+            &::-moz-range-track {
+                background: $grayLight;
+                border: 0;
+                width: 100%;
+                height: 2px;
+                cursor: pointer;
+                transition: all .2s ease;
+            }
+
+            &::-webkit-slider-thumb {
+                -webkit-appearance: none;
+                background: $accent;
+                box-sizing: border-box;
+                width: 10px;
+                height: 10px;
+                border: 0;
+                border-radius: 20px;
+                cursor: pointer;
+                position: relative;
+                z-index: 3;
+
+                .touchevents & {
+                    width: 20px;
+                    height: 20px;
+                }
+            }
+
+            &:focus::-webkit-slider-runnable-track {
+                background: lighten($grayLight, 10%);
+            }
+        }
+
+        .player-scrubber-progress {
             content: '';
             position: absolute;
-            top: -10px;
-            bottom: -10px;
-            right: 0;
+            top: 0;
             left: 0;
-        }
-
-        .front {
-            background: $accent;
             height: 2px;
-            position: relative;
-        }
-
-        .handle {
-            transition: background $transition, box-shadow $transition, opacity $transition;
-            position: absolute;
-            opacity: 0;
-            width: 10px;
-            height: 10px;
-            border: 5px solid $accent;
-            border-radius: 20px;
-            right: 0;
-            top: 50%;
-            margin-top: -10px;
-            margin-right: -10px;
             background: $accent;
-            cursor: pointer;
-
-            .no-touchevents &:hover {
-                background: #fff;
-                box-shadow: 0 0 3px rgba(#000, 0.4);
-            }
-
-            .touchevents & {
-                opacity: 1;
-                background: #fff;
-            }
-        }
-
-        .no-touchevents &:hover {
-            background: #fff;
-        }
-    }
-
-    .no-touchevents &:hover,
-    .touchevents {
-        .player-scrubber-pane .handle {
-            opacity: 1;
         }
     }
 
@@ -225,6 +221,7 @@ body {
                 height: 40px;
                 text-align: center;
                 line-height: 40px;
+                margin-top: 0;
 
                 i {
                     display: inline-block;
