--- a/public/src/js/templates/layout/player.html
+++ b/public/src/js/templates/layout/player.html
@@ -20,11 +20,8 @@
     <a href="#" class="player-expand"><i class="icon icon-arrow-up"></i></a>
 </div>
 <div class="player-scrubber">
-    <div class="player-scrubber-pane">
-        <div class="front" style="width: <%= position %>%;">
-            <div class="handle"></div>
-        </div>
-    </div>
+    <input class="player-scrubber-pane" type="range" min="0" max="100" value="<%= position || 0 %>"/>
+    <div class="player-scrubber-progress" style="width:<%= position || 0 %>%"></div>
     <div class="player-scrubber-time">
         <span class="from"></span>
         <span class="to"></span>
