feat(radio): add radio related endpoints and handle them on the frontend

--- a/public/src/js/templates/music.html
+++ b/public/src/js/templates/music.html
@@ -6,7 +6,10 @@
             <a href="#!/music/radio" class="browse browse-radios"><i class="icon icon-radio"></i>Przeglądaj</a>
         </header>
 
-        <div class="view-radios"></div>
+        <div class="view-radios">
+            <ul class="items-list stations-list"></ul>
+            <div class="loader"></div>
+        </div>
     </div>
     <div class="your-spotify">
         <header class="spotify-header">
