feat(radio): handle radio playback on the frontend

--- a/public/src/scss/layout/_player.scss
+++ b/public/src/scss/layout/_player.scss
@@ -327,4 +327,24 @@ body {
             }
         }
     }
+
+    &.player-radio {
+        .player-mobile {
+            width: 40px;
+        }
+
+        .player-details {
+            padding-right: 40px;
+
+            @include media(tablet) {
+                max-width: 500px;
+            }
+        }
+
+        .player-controls {
+            @include media(tablet) {
+                left: auto;
+            }
+        }
+    }
 }
