--- a/public/src/js/templates/layout/player.html
+++ b/public/src/js/templates/layout/player.html
@@ -10,6 +10,18 @@
     <% } %>
     <% } %>
     <% } %>
+
+    <% if(type === 'radio') { %>
+    <% if(station) { %>
+    <span class="artist"><%= station.get('name') %></span>
+    <% if(title){ %>
+    <span class="name"><%= title %></span>
+    <% } %>
+    <% if(station.get('image')) { %>
+    <img class="image" src="<%= station.getImage() %>"/>
+    <% } %>
+    <% } %>
+    <% } %>
 </div>
 <div class="player-mobile">
     <% if(state === 'playing') { %>
@@ -17,8 +29,11 @@
     <% } else { %>
     <a href="#" data-player-control="toggle" class="player-play"><i class="icon icon-play-small"></i></a>
     <% } %>
+    <% if(type !== 'radio') { %>
     <a href="#" class="player-expand"><i class="icon icon-arrow-up"></i></a>
+    <% } %>
 </div>
+<% if(type !== 'radio') { %>
 <div class="player-scrubber">
     <input class="player-scrubber-pane" type="range" min="0" max="100" value="<%= position || 0 %>"/>
     <div class="player-scrubber-progress" style="width:<%= position || 0 %>%"></div>
@@ -27,6 +42,7 @@
         <span class="to"></span>
     </div>
 </div>
+<% } %>
 <div class="player-controls">
     <% if(type === 'spotify') { %>
     <div class="player-controls-main">
@@ -44,9 +60,14 @@
         <a href="#" data-player-control="repeat" class="player-repeat"><i
             class="icon icon-repeat<%= repeat ? '-active' : '' %>"></i></a>
     </div>
+    <% } %>
+
+    <% if(type === 'radio') { %>
+    <% if(state === 'playing') { %>
+    <a href="#" data-player-control="toggle" class="player-pause icon icon-pause"></a>
     <% } else { %>
-    <a href="#" data-player-control="rewind" class="player-rewind icon icon-rewind"></a>
-    <a href="#" data-player-control="forward" class="player-forward icon icon-forward"></a>
+    <a href="#" data-player-control="toggle" class="player-play icon icon-play"></a>
+    <% } %>
     <% } %>
 </div>
 <div class="player-misc">
